# trachoma

./: .buildinfo  .gitignore  MANIFEST.in  README.md  compare.py  controlled_population.py  drive_from_python.py  genindex.html  index.html  infection.py  init.py  libtrachoma.html  main.py  mda.py  objects.inv  parameters.py  periods.c  periods.h  periods.py  process_scenario_definition.py  py-modindex.html  pyproject.toml  reference.py  scenario.json  scenarios.html  searchindex.js  setup.py  shift.c  simulate.py  state.py  test_apply_rules.py  test_get_thresh.py  test_params.py  test_trans_from_clock.c  tick.c  time_c.py  time_python.py  trachoma.c  trachoma.py  tutorial.html  (+3 more)
.github/workflows/: docs.yml  integration_test.yml
_downloads/7906c64594ab167bbd035e22c32a9d85/: plot_ninf.py
_sources/: scenarios.rst.txt  tutorial.rst.txt
api/: index.html
benchmark/: benchmark.py  init.py  load_parameters.py  step.py
benchmarks/: core.py
benchmarks/endgame/: endgame.py  endgame_no_threading.py  k_values.txt  parameters.json  scenario.json
docs/source/: conf.py  index.rst  libtrachoma.rst  parameters.json  tutorial.rst
example-input/: parameters.json  scenario.json
src/libtrachoma/: periods.c  periods.h  shift.c  shift.h  trachoma.c  trachoma.h
src/ntd-trachoma/: mda.py  simulate.py
src/ntdmc_trachoma/: init.py  mda.py  output.py  parameters.py  process_scenario_definition.py  setup_core.py  simulate.py  simulation.py  state.py
test/: reference.py  test_params.py
tests/: test_mda.py  test_output.py  test_state.py
tests/C/: test_infection_prob.py  (+3 more)
(+5 files in other folders)
